# spacecraft

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  skaffold.yaml
.github/workflows/: greetings.yml
adam/: Cargo.toml
adam/adam/: Cargo.toml
adam/adam/src/: main.rs
frontend/app/: build.gradle.kts
frontend/app/src/main/java/com/example/myapplication/: MainActivity.kt
frontend/gradle/wrapper/: gradle-wrapper.properties
ground-control/spacecraft-site/: go.mod
ground-control/spacecraft-site/cmd/: main.go
gyro/: README.md  deployment.yaml  go.mod
gyro/backend/: go.mod  go.sum
gyro/frontend/gyro-fe/: package-lock.json  package.json
gyro/frontend/gyro-fe/src/: App.tsx
gyro/frontend/gyro-fe/src/components/: IndexPage.tsx
gyro/generator/: go.mod  go.sum
gyro/generator/src/: main.go  merkle.go  merkle_test.go  openassets.go
idea-box/: nft-as-code.md
space-core/: Cargo.toml  Embed.toml  openocd.gdb
space-core/.cargo/: config.toml
space-core/space-core/.cargo/: config.toml
space-core/src/: main.rs
space-craft/: Cargo.toml
space-craft/src/: constants.rs  craft.rs  main.rs  window.rs
space-craft/temp/learn-opengl-rs/src/_4_advanced_opengl/: _2_stencil_testing.rs
space-craft/temp/my-learn-open-gl/: Cargo.toml
src/: main.rs
temp-deploy/: skaffold.yaml
tiny-go-tryout/: README.md  go.mod
tiny-go-tryout/cmd/: main.go
